working models, tests not working

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ before_script:
   - bundle exec rake db:create RAILS_ENV=test
   - bundle exec rake db:migrate
   - bundle exec rake db:test:prepare
+notifications:
+slack: chi-sea-lions-2015:CvtgUYTJs8zNhqGctX2lJ7U2
